--- a/templates/account/history_orders.html
+++ b/templates/account/history_orders.html
@@ -5,6 +5,7 @@
 
 {% block content %}
 
-    <h1>Welcome to the Shoe Shop</h1>
+    <h1>Історія замовлень</h1>
+    {{orders}}
 
 {% endblock content %}
