--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,13 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('auth.logout') }}">Logout ({{ current_user.username }})</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('orders.create_order') }}">Basket</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('orders.order_history') }}">History Orders</a>
+                        </li>
+
                     {% else %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('auth.login') }}">Login</a>
