--- a/templates/menu/list.html
+++ b/templates/menu/list.html
@@ -5,6 +5,23 @@
 
 {% block content %}
 
-    <h1>Welcome to the Shoe Shop</h1>
+    <h1>MENU ITEMS</h1>
+    <div class="container">
 
+        <ul>
+            {% for item in menu_items %}
+
+                <img src="{{ item['image_path'] }}" alt="{{ item['name'] }}" width="300">
+                <h2>{{ item['name'] }}</h2>
+                <p>Price: {{ item['price'] }}</p>
+
+                <li>
+                    <a href="{{ url_for('menu.details_menu_item', item_id=item['id']) }}">Детальніше про {{ item['name'] }}</a>
+                </li>
+            
+            
+            
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock content %}
